Fixed dark mode bugs

--- a/src/components/Admin/Overview.css
+++ b/src/components/Admin/Overview.css
@@ -8,7 +8,7 @@
   }
   .overview{
     width: 10%;
-    height: 10%;
+    height: 11%;
     position: absolute;
     top: 7%;
     left: 7%;
